[gd_scene load_steps=2 format=3 uid="uid://n44d53us24uu"]

[ext_resource type="Script" uid="uid://b1c4k2gwfai8t" path="res://addons/material_creator/material_creator.gd" id="1"]

[node name="Material Creator" type="Panel"]
custom_minimum_size = Vector2(208, 0)
offset_right = 220.0
offset_bottom = 340.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="AlbedoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Albedo Color:"

[node name="AlbedoColorPicker" type="ColorPickerButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="MetallicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Metallic Strength:"

[node name="MetallicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="RoughnessLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Roughness Strength:"

[node name="RoughnessSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
ticks_on_borders = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Apply Material"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Material"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Material"
clip_text = true

[node name="Label" type="Label" parent="VBoxContainer/LoadButton"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Load silly material and
apply to selected node(s)"

[node name="SaveMaterialDialog" type="FileDialog" parent="."]
filters = PackedStringArray("*.silly_mat")

[node name="LoadMaterialDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.silly_mat")
